--- a/chap05.tex
+++ b/chap05.tex
@@ -716,7 +716,7 @@ Many criticize Stallman for rejecting handy political alliances; some psychologi
 \fi
 
 \ifdefined\chs
-很多人都指责理查德，说他经常拒绝触手可得的政治盟友。有人从心理学的角度，认为这是理查德的一个性格特征。他拒绝使用已经被大众接受的“开源”一词，拒绝与这个圈子的人合作项目。他为自由软件奋斗了二十多年，他的名字已经深深地和自由软件绑在了一起，他的政治资本也是要不断投资在这四个字上。在LinuxWorld上领奖时，他的那翻类比，更加深了人们对他的这一印象。茫茫众生之间，很多人早已把跟风赶潮当作一种美德。而理查德在这些人之中，则更显得头脑守旧，不肯在政治大趋势和市场面前有半点让步。
+很多人都指责理查德，说他经常拒绝触手可得的政治盟友。有人从心理学的角度，认为这是理查德的一个性格特征。他拒绝使用已经被大众接受的“开源”一词，拒绝与这个圈子的人合作项目。他为自由软件奋斗了二十多年，他的名字已经深深地和自由软件绑在了一起，他的政治资本也是要不断投资在这四个字上。在LinuxWorld上领奖时，他的那番类比，更加深了人们对他的这一印象。茫茫众生之间，很多人早已把跟风赶潮当作一种美德。而理查德在这些人之中，则更显得头脑守旧，不肯在政治大趋势和市场面前有半点让步。
 \fi
 
 \ifdefined\eng
